# weftlyflow

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_BIBLE.md  LICENSE  Makefile  README.md  RUN.md  alembic.ini  celerybeat-schedule  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  weftlyinfo.md
.claude/: .mcp.json  CLAUDE.md  README.md  settings.json  settings.local.json.example
.claude/agents/: README.md  code-reviewer.md  debugger.md  devops-engineer.md  ip-checker.md  node-author.md  python-expert.md  refactor-specialist.md  security-auditor.md  test-generator.md
.claude/commands/: README.md  plan.md  research.md
.claude/commands/git/: commit.md
.claude/docs/: 01-getting-started.md  02-mcp-and-plugins.md  03-skills-agents-hooks.md  README.md
.claude/hooks/: README.md  block-dangerous-bash.sh  block-n8n-copy.sh  block-secret-writes.sh  hooks.json  karpathy-reminder.sh  post-edit-format.sh  session-end.sh  session-start.sh
.claude/skills/: README.md
.claude/skills/code-review/: SKILL.md
.claude/skills/deploy-check/: SKILL.md
.claude/skills/load-context/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.claude/skills/scaffold-node/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml
deploy/helm/weftlyflow/: Chart.yaml  README.md  values.yaml
docker/: api.Dockerfile  beat.Dockerfile  worker.Dockerfile
docs/: architecture.md  changelog.md  index.md
docs/contributing/: coding-standards.md  credential-plugins.md  ip-compliance.md  load-testing.md  node-plugins.md  security-testing.md  tier-3-integrations.md
docs/design/: saml-slo-and-encryption.md
docs/getting-started/: concepts.md  first-workflow.md  install.md
docs/guide/: ai-and-agents.md  code-node.md  credentials.md  execution-data-storage.md  expressions.md  external-secrets.md  multi-tenancy.md  self-hosting.md  single-sign-on.md  triggers-and-schedules.md  ui-walkthrough.md  webhooks.md  workflows.md
docs/nodes/: index.md
docs/stylesheets/: extra.css
docs/walkthrough/: data-flow.md  frontend.md  index.md  onboarding.md  repo-tour.md  source-backtrack.md
docs/walkthrough/backend/: auth-credentials-expression.md  cross-cutting.md  domain-engine-nodes.md  index.md  server-db.md  triggers-worker-webhooks.md
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/scripts/: capture_screenshots.mjs
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: CredentialEditor.vue  ExecutionPanel.vue  NodePalette.vue  NodeParameterForm.vue  TopBar.vue  TourOverlay.vue
frontend/src/lib/: fieldExamples.ts  node-icons.ts  templates.ts  toast.ts  tour.ts  utils.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  credentials.ts  executions.ts  nodeTypes.ts  workflows.ts
frontend/src/styles/: global.css  tailwind.css
frontend/src/types/: api.ts
frontend/src/views/: Credentials.vue  Editor.vue  ExecutionDetail.vue  Executions.vue  Home.vue  Login.vue
frontend/tests/e2e/: auth.spec.ts  credentials.spec.ts  executions.spec.ts  golden-path.spec.ts
frontend/tests/unit/: auth.spec.ts  nodeTypes.spec.ts
scripts/: gen_node_pages.py  gen_ref_pages.py
src/weftlyflow/: __init__.py  __main__.py  cli.py
src/weftlyflow/auth/: __init__.py  bootstrap.py  constants.py  jwt.py  passwords.py  scopes.py  views.py
src/weftlyflow/binary/: __init__.py  filesystem.py  memory.py  store.py
src/weftlyflow/config/: __init__.py  logging.py  settings.py
src/weftlyflow/credentials/: __init__.py  base.py  cipher.py  registry.py  resolver.py
src/weftlyflow/db/: __init__.py  base.py  engine.py  execution_storage.py
src/weftlyflow/domain/: __init__.py  constants.py  credential.py  errors.py  execution.py  ids.py  node_spec.py  workflow.py
src/weftlyflow/engine/: __init__.py  constants.py  context.py  errors.py  executor.py  graph.py  hooks.py  runtime.py  subworkflow.py
src/weftlyflow/expression/: __init__.py  errors.py  proxies.py  resolver.py  sandbox.py  tokenizer.py
src/weftlyflow/nodes/: __init__.py  base.py  discovery.py  registry.py
src/weftlyflow/observability/: __init__.py  metrics.py
src/weftlyflow/server/: __init__.py  app.py  deps.py  errors.py  lifespan.py  middleware.py  persistence_hooks.py
src/weftlyflow/triggers/: __init__.py  constants.py  leader.py  manager.py  poller.py  scheduler.py
src/weftlyflow/utils/: __init__.py  redaction.py
src/weftlyflow/webhooks/: __init__.py  constants.py  handler.py  parser.py  paths.py  registry.py  types.py
src/weftlyflow/worker/: __init__.py  app.py  execution.py  idempotency.py  queue.py  sandbox_child.py  sandbox_runner.py  tasks.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_audit_retention.py  test_auth.py  test_credentials.py  test_metrics_endpoint.py  test_node_types.py  test_phase6_nodes.py  test_webhook_ingress.py  test_workflow_lifecycle.py
tests/load/: __init__.py  locustfile.py  test_engine_throughput.py
tests/security/: __init__.py  conftest.py  test_auth_hardening.py  test_expression_injection.py  test_webhook_hardening.py
tests/unit/: test_smoke.py
tests/unit/binary/: __init__.py  test_stores.py
tests/unit/credentials/: test_cipher.py  test_slack_api.py  test_types.py
tests/unit/db/: test_execution_repo_store.py  test_execution_storage.py
tests/unit/engine/: conftest.py  test_executor.py  test_five_node_run.py  test_graph.py  test_hooks.py  test_static_data_sharing.py  test_subworkflow.py
tests/unit/expression/: test_resolver.py  test_sandbox_bypass_corpus.py  test_sandbox_fuzz.py  test_tokenizer.py
tests/unit/nodes/: test_activecampaign.py  test_agent_react.py  test_agent_tool_dispatch.py  test_agent_tool_result.py  test_airtable.py  test_algolia.py  test_alpaca.py  test_anthropic.py  test_asana.py  (+102 more)
(+635 files in other folders)
